--- a/custom_components/oled_module_app/manifest.json
+++ b/custom_components/oled_module_app/manifest.json
@@ -1,15 +1,16 @@
 {
   "domain": "oled_module_app",
   "name": "oled_module_app",
-  "codeowners": ["@miladheydaryi"],
+  "codeowners": [
+    "@miladheydaryi"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/miladheydaryi/oled_module/blob/main/README.md",
-  "homekit": {},
   "iot_class": "local_polling",
   "quality_scale": "bronze",
   "requirements": [],
   "ssdp": [],
   "zeroconf": [],
-  "version": "0.0.1"
+  "version": "0.0.2"
 }
