--- a/custom_components/bcpdu_module_app/manifest.json
+++ b/custom_components/bcpdu_module_app/manifest.json
@@ -1,16 +1,16 @@
 {
-  "domain": "oled_module_app",
-  "name": "oled_module_app",
+  "domain": "bcpdu_module_app",
+  "name": "bcpdu_module_app",
   "codeowners": [
     "@miladheydaryi"
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/miladheydaryi/oled_module/blob/main/custom_components/oled_module_app/README.md",
+  "documentation": "https://github.com/miladheydaryi/oled_module/blob/main/custom_components/bcpdu_module_app/README.md",
   "iot_class": "local_polling",
   "quality_scale": "bronze",
   "requirements": [],
   "ssdp": [],
   "zeroconf": [],
-  "version": "0.0.2"
+  "version": "0.0.1"
 }
